[project]
name = "py-sabnzbd"
version = "0.0.1"
authors = [
  { name="Wamy-Dev", email="david@novencido.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Wamy-Dev/py-sabnzbd"
"Bug Tracker" = "https://github.com/Wamy-Dev/py-sabnzbd/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"